<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeKeeper</string>
    <string name="dummy_button">Start</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_ground">BackGround</string>
    <string name="title_activity_status_overview">Status_overview</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Temper">Temperature</string>
    <string name="distance">Distance</string>
    <string name="Light">Lightness</string>
    <string name="title_activity_settings">Settings</string>
    <string name="distance_set">Distance</string>
    <string name="temp_set">Temperatue</string>
    <string name="light_set">Lightness</string>
    <string name="go_setting">Settings</string>
    <string name="temp_val">0</string>
    <string name="distance_val">0</string>
    <string name="light_val">0</string>
    <string name="title_activity_visualization">Visualization</string>
    <string name="go_visual">Visual</string>
    <string name="Back">Back</string>
    <string name="visual_brief"><u>Visualize the variable with respect to time</u></string>
    <string name="setting_brief"><u>Set the alarem threshold of\neach variable</u> </string>
    <string name="confirm">Confirm</string>
    
    

</resources>
