<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="cis542.finalproject.homekeeper.Settings" >

    
    <ImageView 
        	android:id="@+id/settingimage"
       		android:layout_width="fill_parent"
        	android:layout_height="match_parent"
        	android:contentDescription="@string/back_ground"
        	android:gravity="bottom"
        	android:src="@drawable/walle_setting"
        	android:paddingTop="0dip"/>  

    
    <TextView
        android:id="@+id/temp_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        android:textColor ="#ffffff"
        android:text="@string/temp_set" />
    
    <TextView
        android:id="@+id/distance_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/temp_set"
        android:layout_marginTop = "30dp"
        android:layout_marginLeft="50dp"
        android:textSize="25sp"
        android:textColor ="#ffffff"
        android:text="@string/distance_set" />
    
    <TextView
        android:id="@+id/light_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "30dp"
        android:layout_below = "@id/distance_set"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        android:textColor ="#ffffff"
        android:text="@string/light_set" />
    
    <SeekBar
	     android:id="@+id/seekBar_temper"
	     android:layout_width="300dp"
	     android:layout_height="wrap_content"
	     android:layout_alignBottom = "@id/temp_set"
	     android:layout_toRightOf="@id/temp_set"
	     android:layout_marginLeft="10dp"/>
    
      
    <TextView
        android:id="@+id/temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom = "@id/temp_set"
        android:layout_toRightOf="@id/seekBar_temper"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"
        android:textColor ="#ffffff"
        android:text="@string/temp_val" />
    
    <SeekBar
	     android:id="@+id/seekBar_distance"
	     android:layout_width="300dp"
	     android:layout_height="wrap_content"
	     android:layout_alignBottom = "@id/distance_set"
	     android:layout_alignLeft = "@id/seekBar_temper"/>
    
    <TextView
        android:id="@+id/distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom = "@id/distance_set"
        android:layout_toRightOf="@id/seekBar_distance"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"
        android:textColor ="#ffffff"
        android:text="@string/distance_val" />

    <SeekBar
	     android:id="@+id/seekBar_light"
	     android:layout_width="300dp"
	     android:layout_height="wrap_content"
	     android:layout_alignBottom = "@id/light_set"
	     android:layout_toRightOf="@id/temp_set"
	     android:layout_alignLeft = "@id/seekBar_temper"/>
    
    <TextView
        android:id="@+id/light_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom = "@id/light_set"
        android:layout_toRightOf="@id/seekBar_light"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"
        android:textColor ="#ffffff"
        android:text="@string/light_val" />
  	 
   
    
    <Button
       android:id="@+id/confirm"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentRight="true"
       android:layout_alignParentBottom="true"
       android:textSize="30sp"
       android:textColor ="#ffffff"
       android:text="@string/confirm" />
    
    
     
</RelativeLayout>
